# engram

./: .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  CONTRIBUTING.zh.md  DESIGN.md  DESIGN.zh.md  LICENSE  METHODOLOGY.md  METHODOLOGY.zh.md  README.md  README.zh.md  SPEC.md  SPEC.zh.md  TASKS.md  TASKS.zh.md
cli/: README.md  pyproject.toml
cli/engram/: __init__.py  __main__.py  cli.py  config_types.py  conformance.py
cli/engram/adapters/: __init__.py  registry.py  renderer.py  templates.py
cli/engram/benchmark/: __init__.py  metrics.py  runner.py
cli/engram/commands/: __init__.py  adapter.py  config.py  context.py  distill.py  doctor.py  inbox.py  init.py  kb.py  mcp.py  memory.py  propose.py  review.py  status.py  validate.py  validate_pool.py  version.py  web.py  wisdom.py  workflow.py
cli/engram/consistency/: __init__.py  engine.py  evaluator.py  phase1_static.py  phase2_semantic.py  phase3_references.py  phase4_staleness.py  resolve.py  types.py
cli/engram/core/: __init__.py  frontmatter.py  fs.py  git.py  graph_db.py  journal.py  paths.py  scope_conflict.py  uri.py
cli/engram/doctor/: __init__.py  checks_graph_db.py  checks_index.py  checks_layout.py  checks_mandatory_budget.py  checks_pools.py  types.py
cli/engram/inbox/: __init__.py  identity.py  lifecycle.py  list_.py  messenger.py  notify.py
cli/engram/kb/: __init__.py  compiler.py  format.py  paths.py
cli/engram/mcp/: __init__.py  install.py  server.py  tools.py
cli/engram/memory/: __init__.py  derive.py  ident.py  index_md.py  render.py  write.py
cli/engram/migrate/: __init__.py  commands.py  v0_1.py
cli/engram/observer/: __init__.py  cli.py  config.py  daemon.py  decay.py  install.py  install_cli.py  linkage.py  loader.py  paths.py  protocol.py  queue.py  runners.py  service.py  session.py  tier0.py  tier1.py  tier2.py  tier3.py  translators.py
(+232 files in other folders)
