[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "engram"
version = "0.2.0.dev0"
description = "Long-horizon memory system for AI agents and the humans who collaborate with them."
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "engram contributors" }]
keywords = ["memory", "llm", "ai", "context", "agent"]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: POSIX :: Linux",
  "Operating System :: MacOS :: MacOS X",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
  "click>=8.1",
  "PyYAML>=6.0",
  "tomli>=2.0",
  "tomli-w>=1.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-cov>=4.1",
  "ruff>=0.3",
  "mypy>=1.8",
  "types-PyYAML>=6.0",
]

[project.scripts]
engram = "engram.cli:main"

[project.urls]
Homepage = "https://github.com/TbusOS/engram"
Documentation = "https://TbusOS.github.io/engram/"
Repository = "https://github.com/TbusOS/engram"
Issues = "https://github.com/TbusOS/engram/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["engram*"]

[tool.setuptools.package-data]
engram = ["py.typed"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "RUF"]

[tool.mypy]
strict = true
python_version = "3.10"
files = ["engram"]
